test.output
Terminals unused in grammar

    KEYWORD
    YIELD
    IMPORT
    PASS
    LAMBDA
    DEL
    WITH
    WAL_OP
    ARROW


Grammar

    0 $accept: start $end

    1 start: file_input

    2 file_input: NEWLINE file_input
    3           | stmt file_input
    4           | ε

    5 stmt: simple_stmt
    6     | compound_stmt

    7 compound_stmt: if_stmt
    8              | while_stmt
    9              | for_stmt
   10              | try_stmt
   11              | funcdef
   12              | classdef
   13              | async_stmt

   14 async_stmt: ASYNC funcdef
   15           | ASYNC for_stmt

   16 if_stmt: IF namedexpr_test COLON suite elif_namedexpr_test_colon_suite_star ELSE COLON suite
   17        | IF namedexpr_test COLON suite elif_namedexpr_test_colon_suite_star

   18 elif_namedexpr_test_colon_suite_star: ELIF namedexpr_test COLON suite elif_namedexpr_test_colon_suite_star
   19                                     | ε

   20 while_stmt: WHILE namedexpr_test COLON suite ELSE COLON suite
   21           | WHILE namedexpr_test COLON suite

   22 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
   23         | FOR exprlist IN testlist COLON suite

   24 try_stmt: TRY COLON suite FINALLY COLON suite
   25         | TRY COLON suite except_clause_colon_suite try_stmt_options

   26 except_clause_colon_suite: except_clause COLON suite except_clause_colon_suite
   27                          | except_clause COLON suite

   28 try_stmt_options: ELSE COLON suite FINALLY COLON suite
   29                 | ELSE COLON suite
   30                 | FINALLY COLON suite
   31                 | ε

   32 except_clause: EXCEPT test_as_name_optional

   33 test_as_name_optional: test
   34                      | test AS NAME
   35                      | ε

   36 funcdef: DEF NAME parameters FUNC_TYPE_HINT COLON func_body_suite
   37        | DEF NAME parameters COLON func_body_suite

   38 parameters: SMALL_OPEN typedarglist SMALL_CLOSE
   39           | SMALL_OPEN SMALL_CLOSE

   40 typedlist_argument: tfpdef
   41                   | tfpdef EQUAL test

   42 typedlist_arguments: typedlist_argument comma_option_argument_star

   43 comma_option_argument_star: comma_option_argument_star COMMA typedlist_argument
   44                           | ε

   45 typedarglist: typedlist_arguments

   46 tfpdef: NAME
   47       | NAME TYPE_HINT
   48       | NAME COLON test

   49 func_body_suite: simple_stmt
   50                | NEWLINE INDENT stmt_plus DEDENT

   51 suite: simple_stmt
   52      | NEWLINE INDENT stmt_plus DEDENT

   53 stmt_plus: stmt stmt_plus
   54          | stmt

   55 simple_stmt: small_stmt semi_colon_small_stmt_star NEWLINE

   56 semi_colon_small_stmt_star: SEMI_COLON small_stmt semi_colon_small_stmt_star
   57                           | SEMI_COLON
   58                           | ε

   59 small_stmt: expr_stmt
   60           | flow_stmt
   61           | global_stmt
   62           | nonlocal_stmt
   63           | assert_stmt

   64 flow_stmt: break_stmt
   65          | continue_stmt
   66          | return_stmt
   67          | raise_stmt

   68 break_stmt: BREAK

   69 continue_stmt: CONTINUE

   70 return_stmt: RETURN testlist_star_expr
   71            | RETURN

   72 raise_stmt: RAISE
   73           | RAISE test
   74           | RAISE test FROM test

   75 global_stmt: GLOBAL NAME comma_name_star

   76 nonlocal_stmt: NONLOCAL NAME comma_name_star

   77 comma_name_star: COMMA NAME comma_name_star
   78                | ε

   79 assert_stmt: ASSERT test COMMA test
   80            | ASSERT test

   81 expr_stmt: testlist_star_expr annassign
   82          | testlist_star_expr augassign testlist
   83          | testlist_star_expr
   84          | testlist_star_expr expr_stmt_option1_plus

   85 testlist: test symbol_test_star

   86 symbol_test_star: COMMA test symbol_test_star
   87                 | COMMA
   88                 | ε

   89 expr_stmt_option1_plus: EQUAL testlist_star_expr expr_stmt_option1_plus
   90                       | EQUAL testlist_star_expr

   91 annassign: COLON test
   92          | COLON test EQUAL testlist_star_expr

   93 testlist_star_expr: test testlist_star_expr_option1_star
   94                   | star_expr testlist_star_expr_option1_star

   95 testlist_star_expr_option1_star: COMMA test testlist_star_expr_option1_star
   96                                | COMMA star_expr testlist_star_expr_option1_star
   97                                | COMMA
   98                                | ε

   99 augassign: ADD_EQUAL
  100          | SUB_EQUAL
  101          | MUL_EQUAL
  102          | AT_EQUAL
  103          | DIV_EQUAL
  104          | MOD_EQUAL
  105          | BITWISE_AND_EQUAL
  106          | BITWISE_OR_EQUAL
  107          | BITWISE_XOR_EQUAL
  108          | SHIFT_LEFT_EQUAL
  109          | SHIFT_RIGHT_EQUAL
  110          | POW_EQUAL
  111          | FLOOR_DIV_EQUAL

  112 expr: xor_expr symbol_xor_expr_star

  113 star_expr: MUL expr

  114 symbol_xor_expr_star: BITWISE_OR xor_expr symbol_xor_expr_star
  115                     | ε

  116 xor_expr: and_expr symbol_and_expr_star

  117 symbol_and_expr_star: BITWISE_XOR and_expr symbol_and_expr_star
  118                     | ε

  119 and_expr: shift_expr symbol_shift_expr_star

  120 symbol_shift_expr_star: BITWISE_AND shift_expr symbol_shift_expr_star
  121                       | ε

  122 shift_expr: arith_expr shift_arith_expr_star

  123 shift_arith_expr_star: ε
  124                      | SHIFT_LEFT arith_expr shift_arith_expr_star
  125                      | SHIFT_RIGHT arith_expr shift_arith_expr_star

  126 arith_expr: term symbol_term_star

  127 symbol_term_star: ε
  128                 | ADD term symbol_term_star
  129                 | SUB term symbol_term_star

  130 term: factor symbol_factor_star

  131 symbol_factor_star: ε
  132                   | symbol_factor symbol_factor_star

  133 symbol_factor: MUL factor
  134              | AT factor
  135              | DIV factor
  136              | FLOOR_DIV factor
  137              | MOD factor

  138 factor: ADD factor
  139       | SUB factor
  140       | TILDE factor
  141       | power

  142 power: atom_expr
  143      | atom_expr POW factor

  144 atom_expr: AWAIT atom trailer_star
  145          | atom trailer_star

  146 trailer_star: trailer trailer_star
  147             | ε

  148 trailer: SMALL_OPEN arglist SMALL_CLOSE
  149        | SMALL_OPEN SMALL_CLOSE
  150        | BOX_OPEN subscriptlist BOX_CLOSE
  151        | DOT NAME TYPE_HINT
  152        | DOT NAME

  153 classdef: CLASS NAME bracket_arglist_optional COLON suite

  154 bracket_arglist_optional: SMALL_OPEN SMALL_CLOSE
  155                         | SMALL_OPEN arglist SMALL_CLOSE
  156                         | ε

  157 arglist: argument_list COMMA
  158        | argument_list

  159 argument_list: argument_list COMMA argument
  160              | argument

  161 subscriptlist: subscript_list COMMA
  162              | subscript_list

  163 subscript_list: subscript_list COMMA subscript
  164               | subscript

  165 subscript: test
  166          | optional_test COLON optional_test

  167 argument: test
  168         | test comp_for
  169         | test EQUAL test
  170         | POW test
  171         | MUL test

  172 optional_test: test
  173              | ε

  174 comp_iter: comp_for
  175          | comp_if

  176 sync_comp_for: FOR exprlist IN or_test
  177              | FOR exprlist IN or_test comp_iter

  178 comp_for: sync_comp_for
  179         | ASYNC sync_comp_for

  180 comp_if: IF test_nocond
  181        | IF test_nocond comp_iter

  182 test_nocond: or_test

  183 or_test: and_test or_and_test_star

  184 or_and_test_star: OR and_test or_and_test_star
  185                 | ε

  186 and_test: not_test and_not_test_star

  187 and_not_test_star: AND not_test and_not_test_star
  188                  | ε

  189 not_test: NOT not_test
  190         | comparison

  191 comparison: expr comp_op_expr_plus
  192           | expr

  193 comp_op_expr_plus: comp_op expr comp_op_expr_plus
  194                  | comp_op expr

  195 comp_op: LT
  196        | GT
  197        | DOUBLE_EQUAL
  198        | GE
  199        | LE
  200        | NE
  201        | IN
  202        | NOT IN
  203        | IS
  204        | IS NOT

  205 exprlist: expr_star_expr_option_list

  206 expr_star_expr_option: expr
  207                      | star_expr

  208 expr_star_expr_option_list: expr_star_expr_option COMMA expr_star_expr_option_list
  209                           | expr_star_expr_option COMMA
  210                           | expr_star_expr_option

  211 testlist_comp: namedexpr_test_star_expr_option comp_for
  212              | namedexpr_test_star_expr_option_list

  213 namedexpr_test_star_expr_option_list: namedexpr_test_star_expr_option COMMA namedexpr_test_star_expr_option_list
  214                                     | namedexpr_test_star_expr_option COMMA
  215                                     | namedexpr_test_star_expr_option

  216 namedexpr_test_star_expr_option: namedexpr_test
  217                                | star_expr

  218 namedexpr_test: test

  219 test: or_test
  220     | or_test IF or_test ELSE test

  221 atom: SMALL_OPEN testlist_comp SMALL_CLOSE
  222     | SMALL_OPEN SMALL_CLOSE
  223     | BOX_OPEN testlist_comp BOX_CLOSE
  224     | BOX_OPEN BOX_CLOSE
  225     | CURLY_OPEN CURLY_CLOSE
  226     | NAME
  227     | NAME TYPE_HINT
  228     | number
  229     | string_plus
  230     | TRUE
  231     | FALSE
  232     | NONE

  233 number: INTEGER
  234       | FLOAT

  235 string_plus: STRING string_plus
  236            | STRING


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    KEYWORD <elem> (258)
    NEWLINE <elem> (259) 2 50 52 55
    NAME <elem> (260) 34 36 37 46 47 48 75 76 77 151 152 153 226 227
    YIELD <elem> (261)
    FROM <elem> (262) 74
    ELIF <elem> (263) 18
    AWAIT <elem> (264) 144
    ASYNC <elem> (265) 14 15 179
    TRUE <elem> (266) 230
    FALSE <elem> (267) 231
    NONE <elem> (268) 232
    IMPORT <elem> (269)
    PASS <elem> (270)
    BREAK <elem> (271) 68
    EXCEPT <elem> (272) 32
    RAISE <elem> (273) 72 73 74
    CLASS <elem> (274) 153
    FINALLY <elem> (275) 24 28 30
    RETURN <elem> (276) 70 71
    CONTINUE <elem> (277) 69
    FOR <elem> (278) 22 23 176 177
    LAMBDA <elem> (279)
    TRY <elem> (280) 24 25
    AS <elem> (281) 34
    DEF <elem> (282) 36 37
    NONLOCAL <elem> (283) 76
    WHILE <elem> (284) 20 21
    ASSERT <elem> (285) 79 80
    DEL <elem> (286)
    GLOBAL <elem> (287) 75
    WITH <elem> (288)
    INTEGER <elem> (289) 233
    FLOAT <elem> (290) 234
    STRING <elem> (291) 235 236
    POW <elem> (292) 143 170
    FLOOR_DIV <elem> (293) 136
    DIV <elem> (294) 135
    MUL <elem> (295) 113 133 171
    ADD <elem> (296) 128 138
    SUB <elem> (297) 129 139
    MOD <elem> (298) 137
    EQUAL <elem> (299) 41 89 90 92 169
    SHIFT_LEFT <elem> (300) 124
    SHIFT_RIGHT <elem> (301) 125
    BITWISE_AND <elem> (302) 120
    BITWISE_XOR <elem> (303) 117
    BITWISE_OR <elem> (304) 114
    TILDE <elem> (305) 140
    AT <elem> (306) 134
    COMMA <elem> (307) 43 77 79 86 87 95 96 97 157 159 161 163 208 209 213 214
    WAL_OP <elem> (308)
    COLON <elem> (309) 16 17 18 20 21 22 23 24 25 26 27 28 29 30 36 37 48 91 92 153 166
    SEMI_COLON <elem> (310) 56 57
    SMALL_OPEN <elem> (311) 38 39 148 149 154 155 221 222
    SMALL_CLOSE <elem> (312) 38 39 148 149 154 155 221 222
    BOX_OPEN <elem> (313) 150 223 224
    BOX_CLOSE <elem> (314) 150 223 224
    CURLY_OPEN <elem> (315) 225
    CURLY_CLOSE <elem> (316) 225
    DOT <elem> (317) 151 152
    ARROW <elem> (318)
    DOUBLE_EQUAL <elem> (319) 197
    NE <elem> (320) 200
    LT <elem> (321) 195
    GT <elem> (322) 196
    LE <elem> (323) 199
    GE <elem> (324) 198
    IN <elem> (325) 22 23 176 177 201 202
    IS <elem> (326) 203 204
    IF <elem> (327) 16 17 180 181 220
    ELSE <elem> (328) 16 20 22 28 29 220
    AND <elem> (329) 187
    OR <elem> (330) 184
    NOT <elem> (331) 189 202 204
    TYPE_HINT <elem> (332) 47 151 227
    FUNC_TYPE_HINT <elem> (333) 36
    ADD_EQUAL <elem> (334) 99
    SUB_EQUAL <elem> (335) 100
    MUL_EQUAL <elem> (336) 101
    AT_EQUAL <elem> (337) 102
    DIV_EQUAL <elem> (338) 103
    MOD_EQUAL <elem> (339) 104
    BITWISE_AND_EQUAL <elem> (340) 105
    BITWISE_OR_EQUAL <elem> (341) 106
    BITWISE_XOR_EQUAL <elem> (342) 107
    SHIFT_LEFT_EQUAL <elem> (343) 108
    SHIFT_RIGHT_EQUAL <elem> (344) 109
    POW_EQUAL <elem> (345) 110
    FLOOR_DIV_EQUAL <elem> (346) 111
    INDENT (347) 50 52
    DEDENT (348) 50 52


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    start <elem> (95)
        on left: 1
        on right: 0
    file_input <elem> (96)
        on left: 2 3 4
        on right: 1 2 3
    stmt <elem> (97)
        on left: 5 6
        on right: 3 53 54
    compound_stmt <elem> (98)
        on left: 7 8 9 10 11 12 13
        on right: 6
    async_stmt <elem> (99)
        on left: 14 15
        on right: 13
    if_stmt <elem> (100)
        on left: 16 17
        on right: 7
    elif_namedexpr_test_colon_suite_star <elem> (101)
        on left: 18 19
        on right: 16 17 18
    while_stmt <elem> (102)
        on left: 20 21
        on right: 8
    for_stmt <elem> (103)
        on left: 22 23
        on right: 9 15
    try_stmt <elem> (104)
        on left: 24 25
        on right: 10
    except_clause_colon_suite <elem> (105)
        on left: 26 27
        on right: 25 26
    try_stmt_options <elem> (106)
        on left: 28 29 30 31
        on right: 25
    except_clause <elem> (107)
        on left: 32
        on right: 26 27
    test_as_name_optional <elem> (108)
        on left: 33 34 35
        on right: 32
    funcdef <elem> (109)
        on left: 36 37
        on right: 11 14
    parameters <elem> (110)
        on left: 38 39
        on right: 36 37
    typedlist_argument <elem> (111)
        on left: 40 41
        on right: 42 43
    typedlist_arguments <elem> (112)
        on left: 42
        on right: 45
    comma_option_argument_star <elem> (113)
        on left: 43 44
        on right: 42 43
    typedarglist <elem> (114)
        on left: 45
        on right: 38
    tfpdef <elem> (115)
        on left: 46 47 48
        on right: 40 41
    func_body_suite <elem> (116)
        on left: 49 50
        on right: 36 37
    suite <elem> (117)
        on left: 51 52
        on right: 16 17 18 20 21 22 23 24 25 26 27 28 29 30 153
    stmt_plus <elem> (118)
        on left: 53 54
        on right: 50 52 53
    simple_stmt <elem> (119)
        on left: 55
        on right: 5 49 51
    semi_colon_small_stmt_star <elem> (120)
        on left: 56 57 58
        on right: 55 56
    small_stmt <elem> (121)
        on left: 59 60 61 62 63
        on right: 55 56
    flow_stmt <elem> (122)
        on left: 64 65 66 67
        on right: 60
    break_stmt <elem> (123)
        on left: 68
        on right: 64
    continue_stmt <elem> (124)
        on left: 69
        on right: 65
    return_stmt <elem> (125)
        on left: 70 71
        on right: 66
    raise_stmt <elem> (126)
        on left: 72 73 74
        on right: 67
    global_stmt <elem> (127)
        on left: 75
        on right: 61
    nonlocal_stmt <elem> (128)
        on left: 76
        on right: 62
    comma_name_star <elem> (129)
        on left: 77 78
        on right: 75 76 77
    assert_stmt <elem> (130)
        on left: 79 80
        on right: 63
    expr_stmt <elem> (131)
        on left: 81 82 83 84
        on right: 59
    testlist <elem> (132)
        on left: 85
        on right: 22 23 82
    symbol_test_star <elem> (133)
        on left: 86 87 88
        on right: 85 86
    expr_stmt_option1_plus <elem> (134)
        on left: 89 90
        on right: 84 89
    annassign <elem> (135)
        on left: 91 92
        on right: 81
    testlist_star_expr <elem> (136)
        on left: 93 94
        on right: 70 81 82 83 84 89 90 92
    testlist_star_expr_option1_star <elem> (137)
        on left: 95 96 97 98
        on right: 93 94 95 96
    augassign <elem> (138)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 82
    expr <elem> (139)
        on left: 112
        on right: 113 191 192 193 194 206
    star_expr <elem> (140)
        on left: 113
        on right: 94 96 207 217
    symbol_xor_expr_star <elem> (141)
        on left: 114 115
        on right: 112 114
    xor_expr <elem> (142)
        on left: 116
        on right: 112 114
    symbol_and_expr_star <elem> (143)
        on left: 117 118
        on right: 116 117
    and_expr <elem> (144)
        on left: 119
        on right: 116 117
    symbol_shift_expr_star <elem> (145)
        on left: 120 121
        on right: 119 120
    shift_expr <elem> (146)
        on left: 122
        on right: 119 120
    shift_arith_expr_star <elem> (147)
        on left: 123 124 125
        on right: 122 124 125
    arith_expr <elem> (148)
        on left: 126
        on right: 122 124 125
    symbol_term_star <elem> (149)
        on left: 127 128 129
        on right: 126 128 129
    term <elem> (150)
        on left: 130
        on right: 126 128 129
    symbol_factor_star <elem> (151)
        on left: 131 132
        on right: 130 132
    symbol_factor <elem> (152)
        on left: 133 134 135 136 137
        on right: 132
    factor <elem> (153)
        on left: 138 139 140 141
        on right: 130 133 134 135 136 137 138 139 140 143
    power <elem> (154)
        on left: 142 143
        on right: 141
    atom_expr <elem> (155)
        on left: 144 145
        on right: 142 143
    trailer_star <elem> (156)
        on left: 146 147
        on right: 144 145 146
    trailer <elem> (157)
        on left: 148 149 150 151 152
        on right: 146
    classdef <elem> (158)
        on left: 153
        on right: 12
    bracket_arglist_optional <elem> (159)
        on left: 154 155 156
        on right: 153
    arglist <elem> (160)
        on left: 157 158
        on right: 148 155
    argument_list <elem> (161)
        on left: 159 160
        on right: 157 158 159
    subscriptlist <elem> (162)
        on left: 161 162
        on right: 150
    subscript_list <elem> (163)
        on left: 163 164
        on right: 161 162 163
    subscript <elem> (164)
        on left: 165 166
        on right: 163 164
    argument <elem> (165)
        on left: 167 168 169 170 171
        on right: 159 160
    optional_test <elem> (166)
        on left: 172 173
        on right: 166
    comp_iter <elem> (167)
        on left: 174 175
        on right: 177 181
    sync_comp_for <elem> (168)
        on left: 176 177
        on right: 178 179
    comp_for <elem> (169)
        on left: 178 179
        on right: 168 174 211
    comp_if <elem> (170)
        on left: 180 181
        on right: 175
    test_nocond <elem> (171)
        on left: 182
        on right: 180 181
    or_test <elem> (172)
        on left: 183
        on right: 176 177 182 219 220
    or_and_test_star <elem> (173)
        on left: 184 185
        on right: 183 184
    and_test <elem> (174)
        on left: 186
        on right: 183 184
    and_not_test_star <elem> (175)
        on left: 187 188
        on right: 186 187
    not_test <elem> (176)
        on left: 189 190
        on right: 186 187 189
    comparison <elem> (177)
        on left: 191 192
        on right: 190
    comp_op_expr_plus <elem> (178)
        on left: 193 194
        on right: 191 193
    comp_op <elem> (179)
        on left: 195 196 197 198 199 200 201 202 203 204
        on right: 193 194
    exprlist <elem> (180)
        on left: 205
        on right: 22 23 176 177
    expr_star_expr_option <elem> (181)
        on left: 206 207
        on right: 208 209 210
    expr_star_expr_option_list <elem> (182)
        on left: 208 209 210
        on right: 205 208
    testlist_comp <elem> (183)
        on left: 211 212
        on right: 221 223
    namedexpr_test_star_expr_option_list <elem> (184)
        on left: 213 214 215
        on right: 212 213
    namedexpr_test_star_expr_option <elem> (185)
        on left: 216 217
        on right: 211 213 214 215
    namedexpr_test <elem> (186)
        on left: 218
        on right: 16 17 18 20 21 216
    test <elem> (187)
        on left: 219 220
        on right: 33 34 41 48 73 74 79 80 85 86 91 92 93 95 165 167 168 169 170 171 172 218 220
    atom <elem> (188)
        on left: 221 222 223 224 225 226 227 228 229 230 231 232
        on right: 144 145
    number <elem> (189)
        on left: 233 234
        on right: 228
    string_plus <elem> (190)
        on left: 235 236
        on right: 229 235


State 0

    0 $accept: • start $end

    NEWLINE     shift, and go to state 1
    NAME        shift, and go to state 2
    AWAIT       shift, and go to state 3
    ASYNC       shift, and go to state 4
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    NONE        shift, and go to state 7
    BREAK       shift, and go to state 8
    RAISE       shift, and go to state 9
    CLASS       shift, and go to state 10
    RETURN      shift, and go to state 11
    CONTINUE    shift, and go to state 12
    FOR         shift, and go to state 13
    TRY         shift, and go to state 14
    DEF         shift, and go to state 15
    NONLOCAL    shift, and go to state 16
    WHILE       shift, and go to state 17
    ASSERT      shift, and go to state 18
    GLOBAL      shift, and go to state 19
    INTEGER     shift, and go to state 20
    FLOAT       shift, and go to state 21
    STRING      shift, and go to state 22
    MUL         shift, and go to state 23
    ADD         shift, and go to state 24
    SUB         shift, and go to state 25
    TILDE       shift, and go to state 26
    SMALL_OPEN  shift, and go to state 27
    BOX_OPEN    shift, and go to state 28
    CURLY_OPEN  shift, and go to state 29
    IF          shift, and go to state 30
    NOT         shift, and go to state 31

    $default  reduce using rule 4 (file_input)

    start               go to state 32
    file_input          go to state 33
    stmt                go to state 34
    compound_stmt       go to state 35
    async_stmt          go to state 36
    if_stmt             go to state 37
    while_stmt          go to state 38
    for_stmt            go to state 39
    try_stmt            go to state 40
    funcdef             go to state 41
    simple_stmt         go to state 42
    small_stmt          go to state 43
    flow_stmt           go to state 44
    break_stmt          go to state 45
    continue_stmt       go to state 46
    return_stmt         go to state 47
    raise_stmt          go to state 48
    global_stmt         go to state 49
    nonlocal_stmt       go to state 50
    assert_stmt         go to state 51
    expr_stmt           go to state 52
    testlist_star_expr  go to state 53
    expr                go to state 54
    star_expr           go to state 55
    xor_expr            go to state 56
    and_expr            go to state 57
    shift_expr          go to state 58
    arith_expr          go to state 59
    term                go to state 60
    factor              go to state 61
    power               go to state 62
    atom_expr           go to state 63
    classdef            go to state 64
    or_test             go to state 65
    and_test            go to state 66
    not_test            go to state 67
    comparison          go to state 68
    test                go to state 69
    atom                go to state 70
    number              go to state 71
    string_plus         go to state 72


State 1

    2 file_input: NEWLINE • file_input

    NEWLINE     shift, and go to state 1
    NAME        shift, and go to state 2
    AWAIT       shift, and go to state 3
    ASYNC       shift, and go to state 4
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    NONE        shift, and go to state 7
    BREAK       shift, and go to state 8
    RAISE       shift, and go to state 9
    CLASS       shift, and go to state 10
    RETURN      shift, and go to state 11
    CONTINUE    shift, and go to state 12
    FOR         shift, and go to state 13
    TRY         shift, and go to state 14
    DEF         shift, and go to state 15
    NONLOCAL    shift, and go to state 16
    WHILE       shift, and go to state 17
    ASSERT      shift, and go to state 18
    GLOBAL      shift, and go to state 19
    INTEGER     shift, and go to state 20
    FLOAT       shift, and go to state 21
    STRING      shift, and go to state 22
    MUL         shift, and go to state 23
    ADD         shift, and go to state 24
    SUB         shift, and go to state 25
    TILDE       shift, and go to state 26
    SMALL_OPEN  shift, and go to state 27
    BOX_OPEN    shift, and go to state 28
    CURLY_OPEN  shift, and go to state 29
    IF          shift, and go to state 30
    NOT         shift, and go to state 31

    $default  reduce using rule 4 (file_input)

    file_input          go to state 73
    stmt                go to state 34
    compound_stmt       go to state 35
    async_stmt          go to state 36
    if_stmt             go to state 37
    while_stmt          go to state 38
    for_stmt            go to state 39
    try_stmt            go to state 40
    funcdef             go to state 41
    simple_stmt         go to state 42
    small_stmt          go to state 43
    flow_stmt           go to state 44
    break_stmt          go to state 45
    continue_stmt       go to state 46
    return_stmt         go to state 47
    raise_stmt          go to state 48
    global_stmt         go to state 49
    nonlocal_stmt       go to state 50
    assert_stmt         go to state 51
    expr_stmt           go to state 52
    testlist_star_expr  go to state 53
    expr                go to state 54
    star_expr           go to state 55
    xor_expr            go to state 56
    and_expr            go to state 57
    shift_expr          go to state 58
    arith_expr          go to state 59
    term                go to state 60
    factor              go to state 61
    power               go to state 62
    atom_expr           go to state 63
    classdef            go to state 64
    or_test             go to state 65
    and_test            go to state 66
    not_test            go to state 67
    comparison          go to state 68
    test                go to state 69
    atom                go to state 70
    number              go to state 71
    string_plus         go to state 72


State 2

  226 atom: NAME •
  227     | NAME • TYPE_HINT

    TYPE_HINT  shift, and go to state 74

    $default  reduce using rule 226 (atom)


State 3

  144 atom_expr: AWAIT • atom trailer_star

    NAME        shift, and go to state 2
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    NONE        shift, and go to state 7
    INTEGER     shift, and go to state 20
    FLOAT       shift, and go to state 21
    STRING      shift, and go to state 22
    SMALL_OPEN  shift, and go to state 27
    BOX_OPEN    shift, and go to state 28
    CURLY_OPEN  shift, and go to state 29

    atom         go to state 75
    number       go to state 71
    string_plus  go to state 72


State 4

   14 async_stmt: ASYNC • funcdef
   15           | ASYNC • for_stmt

    FOR  shift, and go to state 13
    DEF  shift, and go to state 15

    for_stmt  go to state 76
    funcdef   go to state 77


State 5

  230 atom: TRUE •

    $default  reduce using rule 230 (atom)


State 6

  231 atom: FALSE •

    $default  reduce using rule 231 (atom)


State 7

  232 atom: NONE •

    $default  reduce using rule 232 (atom)


State 8

   68 break_stmt: BREAK •

    $default  reduce using rule 68 (break_stmt)


State 9

   72 raise_stmt: RAISE •
   73           | RAISE • test
   74           | RAISE • test FROM test

    NAME        shift, and go to state 2
    AWAIT       shift, and go to state 3
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    NONE        shift, and go to state 7
    INTEGER     shift, and go to state 20
    FLOAT       shift, and go to state 21
    STRING      shift, and go to state 22
    ADD         shift, and go to state 24
    SUB         shift, and go to state 25
    TILDE       shift, and go to state 26
    SMALL_OPEN  shift, and go to state 27
    BOX_OPEN    shift, and go to state 28
    CURLY_OPEN  shift, and go to state 29
    NOT         shift, and go to state 31

    $default  reduce using rule 72 (raise_stmt)

    expr         go to state 54
    xor_expr     go to state 56
    and_expr     go to state 57
    shift_expr   go to state 58
    arith_expr   go to state 59
    term         go to state 60
    factor       go to state 61
    power        go to state 62
    atom_expr    go to state 63
    or_test      go to state 65
    and_test     go to state 66
    not_test     go to state 67
    comparison   go to state 68
    test         go to state 78
    atom         go to state 70
    number       go to state 71
    string_plus  go to state 72


State 10

  153 classdef: CLASS • NAME bracket_arglist_optional COLON suite

    NAME  shift, and go to state 79


State 11

   70 return_stmt: RETURN • testlist_star_expr
   71            | RETURN •

    NAME        shift, and go to state 2
    AWAIT       shift, and go to state 3
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    NONE        shift, and go to state 7
    INTEGER     shift, and go to state 20
    FLOAT       shift, and go to state 21
    STRING      shift, and go to state 22
    MUL         shift, and go to state 23
    ADD         shift, and go to state 24
    SUB         shift, and go to state 25
    TILDE       shift, and go to state 26
    SMALL_OPEN  shift, and go to state 27
    BOX_OPEN    shift, and go to state 28
    CURLY_OPEN  shift, and go to state 29
    NOT         shift, and go to state 31

    $default  reduce using rule 71 (return_stmt)

    testlist_star_expr  go to state 80
    expr                go to state 54
    star_expr           go to state 55
    xor_expr            go to state 56
    and_expr            go to state 57
    shift_expr          go to state 58
    arith_expr          go to state 59
    term                go to state 60
    factor              go to state 61
    power               go to state 62
    atom_expr           go to state 63
    or_test             go to state 65
    and_test            go to state 66
    not_test            go to state 67
    comparison          go to state 68
    test                go to state 69
    atom                go to state 70
    number              go to state 71
    string_plus         go to state 72


State 12

   69 continue_stmt: CONTINUE •

    $default  reduce using rule 69 (continue_stmt)


State 13

   22 for_stmt: FOR • exprlist IN testlist COLON suite ELSE COLON suite
   23         | FOR • exprlist IN testlist COLON suite

    NAME        shift, and go to state 2
    AWAIT       shift, and go to state 3
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    NONE        shift, and go to state 7
    INTEGER     shift, and go to state 20
    FLOAT       shift, and go to state 21
    STRING      shift, and go to state 22
    MUL         shift, and go to state 23
    ADD         shift, and go to state 24
    SUB         shift, and go to state 25
    TILDE       shift, and go to state 26
    SMALL_OPEN  shift, and go to state 27
    BOX_OPEN    shift, and go to state 28
    CURLY_OPEN  shift, and go to state 29

    expr                        go to state 81
    star_expr                   go to state 82
    xor_expr                    go to state 56
    and_expr                    go to state 57
    shift_expr                  go to state 58
    arith_expr                  go to state 59
    term                        go to state 60
    factor                      go to state 61
    power                       go to state 62
    atom_expr                   go to state 63
    exprlist                    go to state 83
    expr_star_expr_option       go to state 84
    expr_star_expr_option_list  go to state 85
    atom                        go to state 70
    number                      go to state 71
    string_plus                 go to state 72


State 14

   24 try_stmt: TRY • COLON suite FINALLY COLON suite
   25         | TRY • COLON suite except_clause_colon_suite try_stmt_options

    COLON  shift, and go to state 86


State 15

   36 funcdef: DEF • NAME parameters FUNC_TYPE_HINT COLON func_body_suite
   37        | DEF • NAME parameters COLON func_body_suite

    NAME  shift, and go to state 87


State 16

   76 nonlocal_stmt: NONLOCAL • NAME comma_name_star

    NAME  shift, and go to state 88


State 17

   20 while_stmt: WHILE • namedexpr_test COLON suite ELSE COLON suite
   21           | WHILE • namedexpr_test COLON suite

    NAME        shift, and go to state 2
    AWAIT       shift, and go to state 3
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    NONE        shift, and go to state 7
    INTEGER     shift, and go to state 20
    FLOAT       shift, and go to state 21
    STRING      shift, and go to state 22
    ADD         shift, and go to state 24
    SUB         shift, and go to state 25
    TILDE       shift, and go to state 26
    SMALL_OPEN  shift, and go to state 27
    BOX_OPEN    shift, and go to state 28
    CURLY_OPEN  shift, and go to state 29
    NOT         shift, and go to state 31

    expr            go to state 54
    xor_expr        go to state 56
    and_expr        go to state 57
    shift_expr      go to state 58
    arith_expr      go to state 59
    term            go to state 60
    factor          go to state 61
    power           go to state 62
    atom_expr       go to state 63
    or_test         go to state 65
    and_test        go to state 66
    not_test        go to state 67
    comparison      go to state 68
    namedexpr_test  go to state 89
    test            go to state 90
    atom            go to state 70
    number          go to state 71
    string_plus     go to state 72


State 18

   79 assert_stmt: ASSERT • test COMMA test
   80            | ASSERT • test

    NAME        shift, and go to state 2
    AWAIT       shift, and go to state 3
    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    NONE        shift, and go to state 7
    INTEGER     shift, and go to state 20
    FLOAT       shift, and go to state 21
    STRING      shift, and go to state 22
    ADD         shift, and go to state 24
    SUB         shift, and go to state 25
    TILDE       shift, and go to state 26
    SMALL_OPEN  shift, and go to state 27
    BOX_OPEN    shift, and go to state 28
    CURLY_OPEN  shift, and go to state 29
    NOT         shift, and go to state 31
